# nav2_3d_costmap_plugin

./: README.md  临时文.md  临时文档  临时文档.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav2_3d_static_layer/share/nav2_3d_static_layer/: nav2_3d_static_layer.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_3d_static_layer/share/nav2_3d_static_layer/cmake/: nav2_3d_static_layerConfig.cmake
log/: latest_build  latest_list
nav2_3d_costmap_plugin/: CMakeLists.txt  nav2_3d_costmap.xml  package.xml  simple_plugin.xml
nav2_3d_costmap_plugin/include/nav2_3d_costmap_plugin/: nav2_3d_buffer.hpp  nav2_3d_costmap.hpp  nav2_3d_grid.hpp
nav2_3d_costmap_plugin/include/nav2_3d_static_layer/: nav2_3d_static_layer.hpp
nav2_3d_costmap_plugin/include/simple_plugin/: simple_plugin.hpp
nav2_3d_costmap_plugin/log/: latest_list
nav2_3d_costmap_plugin/src/: nav2_3d_buffer.cpp  nav2_3d_costmap.cpp  nav2_3d_grid.cpp  nav2_3d_static_layer.cpp  pc2pub.cpp  process.cpp  simple_plugin.cpp  voxelgrid.cpp  voxelgrid.h
nav2_3d_costmap_plugin/test/: CMakeLists.txt  test_header.hpp
nav2_3d_costmap_plugin/test/integration/: CMakeLists.txt  costmap_tests_launch.py  static3d_tests.cpp  temp_file.cpp
nav2_3d_costmap_plugin/test/map/: diagonalMap.pcd
nav2_3d_costmap_plugin/test/test_launch_ files/: costmap_map_server.launch.py
